# dwc_tools

./: README.md  pyproject.toml
.github/workflows/: docs.yml  pypi.yml  tests.yml
docs/: api.rst  conf.py  examples.rst  index.rst  installation.rst
dwc_tools/: __init__.py  core.py  get_gbif_data.py  get_obis_occurrences_by_taxaids.py
tests/: __init__.py  test_core.py
