[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dwc-tools"
version = "0.1.0"
description = "Python helpers for working with Darwin Core (DwC) taxonomic occurrence data"
readme = "README.md"
authors = [
    { name = "7yl4r" }
]
license = { text = "GPL-3.0-only" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["darwin core", "dwc", "biodiversity", "taxonomy", "occurrence"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/7yl4r/dwc_tools"
Repository = "https://github.com/7yl4r/dwc_tools"
"Bug Tracker" = "https://github.com/7yl4r/dwc_tools/issues"
Documentation = "https://github.com/7yl4r/dwc_tools"

[tool.setuptools]
packages = ["dwc_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=dwc_tools",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
